# GoIT_PyWeb_HW14

FastAPI_test/: docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
FastAPI_test/docs/: conf.py  index.rst
FastAPI_test/docs/_build/doctrees/: environment.pickle  index.doctree
FastAPI_test/docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
FastAPI_test/migrations/versions/: 03f6df3b190c_init.py  4962577db010_init.py  a60970aa857a_init.py
FastAPI_test/src/: schemas.py
FastAPI_test/src/conf/: config.py
FastAPI_test/src/database/: db.py  models.py
FastAPI_test/src/repository/: contacts.py  users.py
FastAPI_test/src/routes/: auth.py  contacts.py  users.py
FastAPI_test/src/services/: auth.py  email.py
FastAPI_test/tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
